# streaming-test

./: .gitignore  README.md
backend/: _config.py  app.py  open_ai.py  pyproject.toml
backend/core/: auth.py  models.py  open_ai.py  schemas.py  simulators.py
backend/utils/: account.py
frontend/: README.txt  index.html  package.json
frontend/src/: App.vue
frontend/src/components/: ChatWindow.vue  ConversationList.vue  UserLogin.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: ChatBot.vue  ChatDetail.vue  UserDashboard.vue
