[tool.poetry]
name = "gainz-app"
version = "0.0.1"
description = ""
authors = ["Aasim Khan <khan.aasim.88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
websockets = "^13.1"
python-multipart = "^0.0.12"
passlib = "^1.7.4"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
